syntax = "proto3";

package auth_service;
option go_package = "github.com/dak151449/IOT_Device_Tracker_Service/pkg/auth_service;authapi";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message  LoginResponse {
  string access_token = 1;
}

message RegistrationRequest {
  string username = 1;
  string password = 2;
}

message EmptyResponse {}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc Registration(RegistrationRequest) returns (EmptyResponse) {};
}